--- a/laboratorio1.html
+++ b/laboratorio1.html
@@ -9,33 +9,34 @@
     <h1>¿Cómo afecta la inteligencia artificial a la ciberseguridad?</h1>
     <hr>
     <p>
-        La IA es una novedad que últimamente está en boca de todos. Se refiere a un campo de la informática que se enfoca en crear sistemas o programas capaces de realizar tareas que normalmente requerirían de la inteligencia humana. La IA busca imitar ciertas capacidades cognitivas de los seres humanos, como el razonamiento, la percepción o el procesamiento del lenguaje y el aprendizaje.
+        La <abbr title="inteligencia Artificial">IA</abbr> es una novedad que últimamente está en boca de todos. Se refiere a un campo de la informática que se enfoca en crear sistemas o programas capaces de realizar tareas que normalmente requerirían de la inteligencia humana. La <abbr title="inteligencia Artificial">IA</abbr> busca imitar ciertas capacidades cognitivas de los seres humanos, como el razonamiento, la percepción o el procesamiento del lenguaje y el aprendizaje.
         <br><br>
-        Existen diferentes enfoques dentro del campo de la IA, como el Machine Learning, donde los sistemas son capaces de aprender de forma autónoma a partir de los datos; el Procesamiento del lenguaje natural, que permite a la tecnología entender y comunicarse en lenguaje humano; y la Visión artificial (Computer vision), que facilita a las máquinas interpretar y analizar imágenes y videos.
+        Existen diferentes enfoques dentro del campo de la <abbr title="inteligencia Artificial">IA</abbr>, como el Machine Learning, donde los sistemas son capaces de aprender de forma autónoma a partir de los datos; el Procesamiento del lenguaje natural, que permite a la tecnología entender y comunicarse en lenguaje humano; y la Visión artificial (Computer vision), que facilita a las máquinas interpretar y analizar imágenes y videos.
         <br><br>
-        “Este avance no deja de sorprender, revolucionando el paradigma social y tecnológico, garantizando una nueva realidad que debemos entender, pero, sobre todo, saber manipular. Gartner estima que para el 2025 al menos un 50% de las empresas habrá diseñado plataformas de orquestación para operacionalizar la IA, en comparación con menos del 10% en 2020”, afirma Carlos Oviedo Risi, Country Manager para Argentina y Chile de IFX Networks.  
+        “Este avance no deja de sorprender, revolucionando el paradigma social y tecnológico, garantizando una nueva realidad que debemos entender, pero, sobre todo, saber manipular. Gartner estima que para el 2025 al menos un 50% de las empresas habrá diseñado plataformas de orquestación para operacionalizar la <abbr title="inteligencia Artificial">IA</abbr>, en comparación con menos del 10% en 2020”, afirma Carlos Oviedo Risi, Country Manager para Argentina y Chile de IFX Networks.  
     </p>
     <h2>Protección de la información</h2>
     <p>
-        En el campo de la ciberseguridad, la IA puede ser utilizada como una herramienta poderosa para mejorar la protección de la información. Algunas de las opciones a considerar son:
+        En el campo de la ciberseguridad, la <abbr title="inteligencia Artificial">IA</abbr> puede ser utilizada como una herramienta poderosa para mejorar la protección de la información. Algunas de las opciones a considerar son:
         <br><br>
-        Detección de amenazas: los sistemas de IA están en capacidad de analizar grandes volúmenes de datos en tiempo real. Esto permite detectar comportamientos anómalos que pueden indicar un ciberataque, como intentos de intrusión o malware. Con un correcto diagnóstico, pueden alertar de manera temprana a los profesionales de seguridad para tomar medidas inmediatas.
+        <strong>Detección de amenazas:</strong> los sistemas de <abbr title="inteligencia Artificial">IA</abbr> están en capacidad de analizar grandes volúmenes de datos en tiempo real. Esto permite detectar comportamientos anómalos que pueden indicar un ciberataque, como intentos de intrusión o malware. Con un correcto diagnóstico, pueden alertar de manera temprana a los profesionales de seguridad para tomar medidas inmediatas.
         <br><br>
-        Análisis de vulnerabilidades: la IA puede estudiar y evaluar la seguridad de los sistemas de las organizaciones en busca de posibles vulnerabilidades. De esta manera es posible prevenir las amenazas de ciberdelincuentes, tomando las medidas preventivas necesarias.
+        <strong>Análisis de vulnerabilidades:</strong> la <abbr title="inteligencia Artificial">IA</abbr> puede estudiar y evaluar la seguridad de los sistemas de las organizaciones en busca de posibles vulnerabilidades. De esta manera es posible prevenir las amenazas de ciberdelincuentes, tomando las medidas preventivas necesarias.
         <br><br>
-        Autenticación y acceso seguro: el uso de técnicas de reconocimiento de voz, reconocimiento facial o análisis de comportamiento del usuario contribuye a fortalecer la autenticación y el acceso seguro a las cuentas o plataformas.
+        <strong>Autenticación y acceso seguro:</strong> el uso de técnicas de reconocimiento de voz, reconocimiento facial o análisis de comportamiento del usuario contribuye a fortalecer la autenticación y el acceso seguro a las cuentas o plataformas.
         
     </p>
     <h2>Peligros a tener en cuenta</h2>
     <p>
-        Existe la llamada IA Ofensiva. Se refiere a la misma IA y sus capacidades, pero utilizada para alterar los procesos de la IA de defensa. Para este fin, introduce datos falsos en el algoritmo que usa el sistema, alterando el machine learning de los dispositivos.
+        Existe la llamada <abbr title="inteligencia Artificial">IA</abbr> Ofensiva. Se refiere a la misma IA y sus capacidades, pero utilizada para alterar los procesos de la <abbr title="inteligencia Artificial">IA</abbr> de defensa. Para este fin, introduce datos falsos en el algoritmo que usa el sistema, alterando el machine learning de los dispositivos.
         <br><br>
-        La IA Ofensiva puede crear correos falsos para el phishing, falsificar identidades y hasta generar imágenes falsas con alta verosimilitud, como hemos visto en tendencia últimamente con la imagen del Papa Francisco con una chaqueta blanca acolchada
+        La <abbr title="inteligencia Artificial">IA</abbr> Ofensiva puede crear correos falsos para el phishing, falsificar identidades y hasta generar imágenes falsas con alta verosimilitud, como hemos visto en tendencia últimamente con la imagen del Papa Francisco con una chaqueta blanca acolchada
         <br><br>
         “Mientras más evolucionan estas tecnologías, más beneficios y riesgos se desarrollan. Es por eso que no debemos tomar una postura negacionista, pero tampoco ignorar las diversas amenazas que hay al respecto. Es necesario introducirse en el tema, confiar en los especialistas y apostar por soluciones de máxima seguridad”, concluye Carlos Oviedo Risi.   
         <br><br>
-        technocio
-        contactof@technocio.com
+        <em> technocio</em>
+        <br>
+        <em>contactof@technocio.com</em>
 
     </p>
 </body>
